leprekus-site/src/components/Carousel/Carousel.css
.carousel {
    overflow: hidden;
}
/* 
moves items 
translates to move items around
*/
.inner {
    white-space: nowrap;
    transition: transform 0.3s;
}
/* displays single items */
.item {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    height: 200px;
    background-color: transparent;
    color: #000000;
}

.active-item {
    color: #000;
    background-color: #FFF;
    width: 10px;
    height: 10px;
    border-radius: 100%;

}
.unactive-item {
    color: #FFF;
    background-color: #000;
    width: 10px;
    height: 10px;
    border-radius: 100%;

}
.button-previous, .button-next {
    width: 100px;
    height: 50px;
    background-size: 25%;
    background-repeat: no-repeat;
    background-position: center;


}
.button-previous {
    background-color: #1d2525;
    color: #efedf0;
    background-image: url('../../assets/right-arrowDark.png');
    transform: rotate(180deg);
}
.button-next {
    background-color: #efedf0;
    color: #1d2525;
    background-image: url('../../assets/right-arrowLight.png');

}

